--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 bitcoin = "0.28.1"
 tempfile = "3.3.0"
 bitcoincore-rpc = "0.15.0"
+env_logger = "0.9.0"
 
 [dependencies.bdk]
 version = "0.20.0"
