--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,9 +13,7 @@ defaults:
     shell: bash
 
 jobs:
-  all:
-    name: All
-
+  pass:
     runs-on: macos-latest
 
     steps:
@@ -26,14 +24,17 @@ jobs:
       with:
         toolchain: stable
 
-    - name: Homebrew
-      run: |
-        brew install bitcoin
-        RUST_LOG=trace RUST_BACKTRACE=1 BITCOIND=bitcoind cargo run
+    - run: make pass
 
-    - name: Source
-      run: |
-        brew install automake libtool boost pkg-config libevent
-        git clone https://github.com/bitcoin/bitcoin.git
-        (cd bitcoin && ./autogen.sh && ./configure --with-gui=no && make src/bitcoind)
-        RUST_LOG=trace RUST_BACKTRACE=1 BITCOIND=$PWD/bitcoin/src/bitcoind cargo run
+  fail:
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install Rust Toolchain Components
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+
+    - run: make fail
